# back

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  env-local  pyproject.toml
.github/workflows/: checks.yml  on_push_main.yml
app/: logging.dev.ini
app/app/: asgi.py  opensearch.py  settings.py  urls.py
app/conversation/: admin.py  apps.py  models.py  router.py  urls.py  views.py
app/conversation/consumers/: __init__.py  middlewares.py  rt_transcribe.py
app/conversation/management/commands/: index.py
app/conversation/migrations/: 0001_initial.py  0002_conversationmodel_conversation_file.py  0002_patientmodel_user.py  0003_conversationmodel_conversation.py  0003_remove_conversationmodel_user.py  0004_remove_conversationmodel_user.py  0005_answermodel_alter_conversationmodel_patient_and_more.py  0006_conversationmodel_duration.py  0007_answermodel_conversation.py  0008_alter_patientmodel_email.py  0009_ephemeralanswermodel.py  0010_relevantpointmodel_category.py  0011_alter_answermodel_options_and_more.py  0012_alter_answermodel_unique_together.py  0013_answermodel_resolved.py  0014_alter_answermodel_text_and_more.py  0015_alter_answermodel_created_at_and_more.py
app/conversation/models/: __init__.py  answer.py  answer_version.py  conversation.py  ephemeral_answer.py  pacient.py  patient.py  relevant_point.py
app/conversation/serializers/: __init__.py  answer.py  conversation.py  ephemeral_answer.py  patient.py  relevant_point.py  search.py  transcribe_conversation_file.py
app/conversation/services/: __init__.py  aws_transcribe.py  chatgpt.py  deepgram.py  enhanced_whisper.py  opensearch.py  whisper.py
app/conversation/views/: __init__.py  answer.py  conversation.py  ephemeral_answer.py  patient.py  relevant_point.py  search.py  transcribe_conversation_file.py
app/core/: admin.py  models.py
app/core/aws/: secrets_manager.py
app/core/management/commands/: wait_for_db.py
app/user/: serializers.py  urls.py  views.py
dumps/: 2023-04-29-04-07.dump  2023-04-29-04-15.dump  2023-04-29-04-19.dump  2023-04-29-16-50.dump  2023-04-29-17-19.dump  2023-04-29-20-26.dump  2023-04-29-20-38.dump  2023-04-29-23-53.dump  2023-04-30-19-40.dump  2023-04-30-19-49.dump  2023-04-30-22-40.dump  2023-05-01-18-26.dump  2023-05-03-20-45.dump  2023-05-03-21-49.dump  2023-05-03-23-38.dump  2023-05-03-23-39.dump  2023-05-05-01-11.dump  2023-05-07-14-30.dump
scripts/: dump.sh  restore.sh
